Task5/non-admin-api-allow.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: nginx
    role: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api
spec:
  selector:
    app: nginx
    role: back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end
spec:
  selector:
    app: nginx
    role: admin-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api
spec:
  selector:
    app: nginx
    role: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-backend-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: nginx
              role: front-end
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: nginx
              role: back-end-api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-frontend-backend-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: nginx
              role: admin-front-end
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: nginx
              role: admin-back-end-api
